examples/error/two-errors.skald
var
    $ primeiro erro
    a int 
rav

main
    $ segundo erro
    out a
niam
